--- a/src/Velocity.Avalonia/Views/ProductViews/EditProductView.axaml
+++ b/src/Velocity.Avalonia/Views/ProductViews/EditProductView.axaml
@@ -3,10 +3,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:viewModels="clr-namespace:Velocity.Avalonia.ViewModels.Products"
-             xmlns:products="clr-namespace:Velocity.Shared.Requests.Products;assembly=Velocity.Shared"
+             xmlns:suppliers="clr-namespace:Velocity.Shared.Responses.Suppliers;assembly=Velocity.Shared"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Velocity.Avalonia.Views.ProductViews.EditProductView"
-             x:DataType="viewModels:EditProductViewModel">
+             x:DataType="viewModels:EditProductViewModel"
+             Loaded="Control_OnLoaded">
     <UserControl.Styles>
         <Style Selector="TextBox">
             <Setter Property="MinWidth" Value="300" />
@@ -20,39 +21,39 @@
     </UserControl.Styles>
     <Grid RowDefinitions="Auto,*" ColumnDefinitions="*">
         <Panel Grid.Row="0" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Center" Margin="10 5 10 10">
-            <TextBlock FontSize="24">Add Product</TextBlock>
-            <TextBlock Text="{Binding Product}" />
+            <TextBlock FontSize="24">Edit Product</TextBlock>
             <StackPanel HorizontalAlignment="Right" Spacing="10" Orientation="Horizontal">
-                <Button Width="130" Content="Save Product" Command="{Binding SaveProductCommand}" />
-                <Button Content="Go Back" Command="{Binding CancelCommand}" />
+                <Button Width="130" Content="Update Product" Command="{Binding SaveProductCommand}" />
+                <Button Content="Cancel" Command="{Binding CancelCommand}" />
             </StackPanel>
         </Panel>
         <Border Grid.Row="1" Grid.Column="0" BorderBrush="LightGray" BorderThickness="2" Margin="5 5 5 15" CornerRadius="5">
             <ScrollViewer HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                <ContentControl Content="{Binding Product}">
-                    <ContentControl.DataTemplates>
-                        <DataTemplate DataType="{x:Type products:UpdateProductRequest}">
-                            <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-                                <StackPanel Classes="FormControl">
-                                    <TextBlock Text="Name" />
-                                    <TextBox Text="{Binding Name}" />
-                                </StackPanel>
-                                <StackPanel Classes="FormControl">
-                                    <TextBlock Text="Description" />
-                                    <TextBox Text="{Binding Description}" />
-                                </StackPanel>
-                                <StackPanel Classes="FormControl">
-                                    <TextBlock Text="Alert Quantity" />
-                                    <TextBox Text="{Binding AlertQuantity}" />
-                                </StackPanel>
-                                <StackPanel Classes="FormControl">
-                                    <TextBlock Text="Supplier" />
-                                    <AutoCompleteBox Name="TxtSupplier" Text="{ReflectionBinding ViewModel.Supplier,RelativeSource={RelativeSource AncestorType=UserControl}}" />
-                                </StackPanel>
-                            </WrapPanel>
-                        </DataTemplate>
-                    </ContentControl.DataTemplates>
-                </ContentControl>
+                <WrapPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+                    <StackPanel Classes="FormControl">
+                        <TextBlock Text="Name" />
+                        <TextBox Text="{Binding Product.Name}" />
+                    </StackPanel>
+                    <StackPanel Classes="FormControl">
+                        <TextBlock Text="Description" />
+                        <TextBox Text="{Binding Product.Description}" />
+                    </StackPanel>
+                    <StackPanel Classes="FormControl">
+                        <TextBlock Text="Alert Quantity" />
+                        <TextBox Text="{Binding Product.AlertQuantity}" />
+                    </StackPanel>
+                    <StackPanel Classes="FormControl">
+                        <TextBlock Text="Supplier" />
+                        <AutoCompleteBox x:Name="TxtSupplier" FilterMode="None"
+                                         SelectedItem="{Binding SelectedSupplier}">
+                            <AutoCompleteBox.ItemTemplate>
+                                <DataTemplate DataType="{x:Type suppliers:SupplierResponse}">
+                                    <TextBlock Text="{Binding Name}" />
+                                </DataTemplate>
+                            </AutoCompleteBox.ItemTemplate>
+                        </AutoCompleteBox>
+                    </StackPanel>
+                </WrapPanel>
             </ScrollViewer>
         </Border>
     </Grid>
