Move ThemeProvider component to Main.razor

--- a/src/Velocity.Frontend/Main.razor
+++ b/src/Velocity.Frontend/Main.razor
@@ -1,4 +1,7 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿<MudThemeProvider @bind-IsDarkMode="AppThemeService.IsDarkMode" />
+<MudDialogProvider />
+<MudSnackbarProvider />
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1"/>
